// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for build tool cfamily: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="cfamily"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
            onboarding.tutorial.with.gitlab_ci.yml.done.mr_deco_automatic
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool cfamily: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="cfamily"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool dotnet: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="dotnet"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
            onboarding.tutorial.with.gitlab_ci.yml.done.mr_deco_automatic
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool dotnet: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="dotnet"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool gradle: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="gradle"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
            onboarding.tutorial.with.gitlab_ci.yml.done.mr_deco_automatic
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool gradle: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="gradle"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool maven: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="maven"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
            onboarding.tutorial.with.gitlab_ci.yml.done.mr_deco_automatic
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool maven: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="maven"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool other: with branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={true}
            buildTool="other"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
            onboarding.tutorial.with.gitlab_ci.yml.done.mr_deco_automatic
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly for build tool other: without branch support 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    >
      <React.Fragment>
        <div
          className="big-spacer-bottom"
        >
          <FormattedMessage
            defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.description"
            id="onboarding.tutorial.with.gitlab_ci.yml.description"
            values={
              Object {
                "filename": <React.Fragment>
                  <code
                    className="rule"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.filename
                  </code>
                  <ClipboardIconButton
                    className="little-spacer-left"
                    copyValue="onboarding.tutorial.with.gitlab_ci.yml.filename"
                  />
                </React.Fragment>,
              }
            }
          />
        </div>
        <div
          className="big-spacer-bottom abs-width-600"
        >
          <PipeCommand
            branchesEnabled={false}
            buildTool="other"
            projectKey="test"
          />
        </div>
        <p
          className="little-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.baseconfig.no_branches
        </p>
        <p
          className="huge-spacer-bottom"
        >
          onboarding.tutorial.with.gitlab_ci.yml.existing
        </p>
        <hr
          className="no-horizontal-margins"
        />
        <div>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.description
             
          </p>
          <p
            className="big-spacer-bottom"
          >
            <strong>
              onboarding.tutorial.with.gitlab_ci.yml.done.then-what
            </strong>
             
            onboarding.tutorial.with.gitlab_ci.yml.done.then-what.description
          </p>
          <p
            className="big-spacer-bottom"
          >
            <FormattedMessage
              defaultMessage="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              id="onboarding.tutorial.with.gitlab_ci.yml.done.links.title"
              values={
                Object {
                  "links": <Link
                    onlyActiveOnIndex={false}
                    rel="noopener noreferrer"
                    style={Object {}}
                    target="_blank"
                    to="/documentation/user-guide/quality-gates/"
                  >
                    onboarding.tutorial.with.gitlab_ci.yml.done.links.QG
                  </Link>,
                }
              }
            />
          </p>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  open={true}
  renderForm={[Function]}
  stepNumber={3}
  stepTitle="onboarding.tutorial.with.gitlab_ci.yml.title"
/>
`;

exports[`should render correctly: initial content 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="flex-columns"
  >
    <div
      className="flex-column-full"
    />
  </div>
</div>
`;
